# nickgpt

./: .gitignore  README.md  pyproject.toml
computed/: vocab.pkl
src/: main.py  model.py  tokenizer.py  util.py
src/dataset/: __init__.py  download.py  tiny_stories.py
src/pretraining/: __init__.py  experiment.py  state.py  trainer.py
src/pretraining/configs/: README.md  __init__.py  nickgpt_2m.py  overfit_batch.py  pretrain_2m.py
